--- a/t.tex
+++ b/t.tex
@@ -44,8 +44,8 @@
  %\chapter{Introduction}
  %\input{intro.tex}
  %
- %\chapter{Theory} % “
- %{\hfill \textit{"There is Nothing More Practical Than A Good Theory"} --- probably K. Lewin}
+ %\chapter{Theory} 
+ %{\hfill \textit{``There is Nothing More Practical Than A Good Theory''} --- probably K. Lewin}
  %\input{theory.tex}
  %
  %\chapter{Numerical methods} 
@@ -56,9 +56,10 @@
  %\input{expe.tex}
 %
 \chapter{Results}
-\hfill \textit{"The purpose of computing is insight, not numbers."} --- R. W. Hamming
+\hfill \textit{``The purpose of computing is insight, not numbers."} --- R. W. Hamming
 \input{result.tex}
 
+\hfill \textit{``If you want to build a ship, don’t drum up people to collect wood and don't assign them tasks and work, but rather teach them to long for the endless immensity of the sea.''} -- Antoine de Saint-Exup\'{e}ry
 \chapter{Conclusion}
 \input{conclusion.tex}
 
