own publi and fishnet refs

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1,6 +1,39 @@
 % == Own publications ==   ,
 % ---- as primary author ---- %/*{{{*/
 
+@inproceedings{dominec2015can,
+  title={Can negative-index all-dielectric metamaterials be ever made?},
+  author={Dominec, F and Kadlec, C and N{\v{e}}mec, H and Ku{\v{z}}el, P and Kadlec, F},
+  booktitle={Photonica2015},
+  pages={215},
+  year={2015},
+  organization={PHOTONICA2015 the fifth international  school and conference on photonics}
+}
+
+@inproceedings{dominec2015poster,
+  TITLE={Transition between metamaterial and photonic-crystal behavior in arrays of dielectric rods},
+  AUTHOR={Dominec, F and Kadlec, C and N{\v{e}}mec, H and Ku{\v{z}}el, P and Kadlec, F},
+  BOOKTITLE={Nanometa 2015, Seefeld (Austria)},
+  YEAR={2015},
+  note = {Poster},
+}
+
+%% Paper in Opt. Express 2014
+@article{dominec2014transition, 
+  AUTHOR = {F. Dominec and C. Kadlec and H. N\v{e}mec and P. Ku\v{z}el and F. Kadlec}, 
+  TITLE = {Transition between metamaterial and photonic-crystal behavior in arrays of dielectric rods}, 
+  JOURNAL = {Opt. Express}, 
+  YEAR = {2014},
+  keywords = {Metamaterials; Photonic crystals},
+  number = {25}, 
+  pages = {30492--30503}, 
+  publisher = {OSA},
+  volume = {22}, 
+  url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-25-30492},
+  doi = {10.1364/OE.22.030492},
+}
+
+
 %% Conference in Prague, Czech Republic, April 17-18, 2013 [issued May 6, 2013]
 @inproceedings{dominec2013spie,
   TITLE = {Resonant terahertz response of {TiO}$_{2}$ microspheres},
@@ -20,29 +53,6 @@
   AUTHOR={Dominec, F and Kadlec, C and N{\v{e}}mec, H and Kadlec, F and Yahiaoui, R and Mounaix, P and Chung, U-Chan and Ku{\v{z}}el, P},
   BOOKTITLE={The 6th International Congress on Advanced Electromagnetic Materials in Microwaves and Optics, St. Petersburg (Russia)},
   YEAR={2012},
-  note = {Poster},
-}
-
-%% Paper in Opt. Express 2014
-@article{dominec2014transition, 
-  AUTHOR = {F. Dominec and C. Kadlec and H. N\v{e}mec and P. Ku\v{z}el and F. Kadlec}, 
-  TITLE = {Transition between metamaterial and photonic-crystal behavior in arrays of dielectric rods}, 
-  JOURNAL = {Opt. Express}, 
-  YEAR = {2014},
-  keywords = {Metamaterials; Photonic crystals},
-  number = {25}, 
-  pages = {30492--30503}, 
-  publisher = {OSA},
-  volume = {22}, 
-  url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-25-30492},
-  doi = {10.1364/OE.22.030492},
-}
-
-@inproceedings{dominec2015poster,
-  TITLE={Transition between metamaterial and photonic-crystal behavior in arrays of dielectric rods},
-  AUTHOR={Dominec, F and Kadlec, C and N{\v{e}}mec, H and Ku{\v{z}}el, P and Kadlec, F},
-  BOOKTITLE={Nanometa 2015, Seefeld (Austria)},
-  YEAR={2015},
   note = {Poster},
 }
 
@@ -822,30 +832,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   organization={IEEE}
 }
 
-%  -- Homogenisation: misc --
- 	 	Jelinek2010 Fishnet homogenization
-
-@article{valentine2011development,
-  title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
-  author={Valentine, Jason and Zhang, Shuang and Zentgraf, Thomas and Zhang, Xiang},
-  journal={Proceedings of the IEEE},
-  volume={99},
-  number={10},
-  pages={1682--1690},
-  year={2011},
-  publisher={IEEE}
-}
-@article{navarro2011dual,
-  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
-  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
-  journal={Optics letters},
-  volume={36},
-  number={21},
-  pages={4245--4247},
-  year={2011},
-  publisher={Optical Society of America}
-}
-
 
 @article{hasar2009new,
   title={A new microwave method based on transmission scattering parameter measurements for simultaneous broadband and stable permittivity and permeability determination},
@@ -1336,6 +1322,102 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
+@article{croenne2009left,
+  title={Left handed dispersion of a stack of subwavelength hole metal arrays at terahertz frequencies},
+  author={Cro{\"e}nne, Charles and Garet, Fr{\'e}d{\'e}ric and Lheurette, {\'E}ric and Coutaz, Jean-Louis and Lippens, Didier},
+  journal={Applied Physics Letters},
+  volume={94},
+  number={13},
+  pages={133112},
+  year={2009},
+  publisher={AIP Publishing}
+}
+@article{kruk2012spatial,
+  title={Spatial dispersion of multilayer fishnet metamaterials},
+  author={Kruk, Sergey S and Powell, David A and Minovich, Alexander and Neshev, Dragomir N and Kivshar, Yuri S},
+  journal={Optics express},
+  volume={20},
+  number={14},
+  pages={15100--15105},
+  year={2012},
+  publisher={Optical Society of America}
+}
+@article{lalanne2005theory,
+  title={Theory of surface plasmon generation at nanoslit apertures},
+  author={Lalanne, Ph and Hugonin, JP and Rodier, JC},
+  journal={Physical review letters},
+  volume={95},
+  number={26},
+  pages={263902},
+  year={2005},
+  publisher={APS}
+}
+@article{navarro2011dual,
+  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
+  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  journal={Optics letters},
+  volume={36},
+  number={21},
+  pages={4245--4247},
+  year={2011},
+  publisher={Optical Society of America}
+}
+@article{valentine2011development,
+  title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
+  author={Valentine, Jason and Zhang, Shuang and Zentgraf, Thomas and Zhang, Xiang},
+  journal={Proceedings of the IEEE},
+  volume={99},
+  number={10},
+  pages={1682--1690},
+  year={2011},
+  publisher={IEEE}
+}
+Wang exp neg refr on wedge THz
+Wang Composite left right arrays of holes
+Weiner Transmission through metallic slits
+Yahiaoui Metallodielectric structure with negative N
+Zhang Transmission of doped silicon hole array
+
+
+
+
+
+
+
+
+
+
+@article{jelinek2010fishnet,
+  title={Fishnet metamaterials-rules for refraction and limits of homogenization},
+  author={Jelinek, Lukas and Marques, Ricardo and Machac, Jan},
+  journal={Optics express},
+  volume={18},
+  number={17},
+  pages={17940--17949},
+  year={2010},
+  publisher={Optical Society of America}
+}
+@article{valentine2011development,
+  title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
+  author={Valentine, Jason and Zhang, Shuang and Zentgraf, Thomas and Zhang, Xiang},
+  journal={Proceedings of the IEEE},
+  volume={99},
+  number={10},
+  pages={1682--1690},
+  year={2011},
+  publisher={IEEE}
+}
+@article{navarro2011dual,
+  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
+  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  journal={Optics letters},
+  volume={36},
+  number={21},
+  pages={4245--4247},
+  year={2011},
+  publisher={Optical Society of America}
+}
+
 @article{zhou2008efficient,
   title={An efficient way to reduce losses of left-handed metamaterials},
   author={Zhou, Jiangfeng and Koschny, Thomas and Soukoulis, Costas M},
@@ -1365,6 +1447,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={46--49},
   year={2012}
 }
+\cite{porterfield1994resonant, ulrich1967far, ulrich1967effective, vogel1964transmission}
 @article{ulrich1967effective,
   title={Effective low-pass filters for far infrared frequencies},
   author={Ulrich, R},
@@ -1418,10 +1501,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 
 /*}}}*/
-% Aleian 2012 Plasmonic Au SiO2 nanoparticles
-% Cristian Kusko interesting simulated spectra
-% Felbacq 2005 
-% Felbacq 2005 Theory of mesoscopic magnetism in PC
 
 -- nonresonant composites (1st band operation) /*{{{*/
 @article{richter1995,
@@ -2760,3 +2839,8 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   year={2012},
   publisher={Nature Publishing Group}
 }
+
+
+
+
+
