some points to write about

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,4 @@
+.. key originalities with respect to the state of the art in this field
 
 %% what should Conclusion contain:
 % [ ] overall analysis and integration of the research and conclusions of the thesis in
@@ -25,8 +26,9 @@
 %    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
 %	 ... which is also illustrated by the numerous recent publications on the rod array, which lies at the boundary between MM and PhC
 %  * filled the demand for some starting overview of the common structures, in a level of detail and
-%    didactic approach that the author was missing in the available literature
-%	  sum up all  structures
+%    didactic approach that the author felt to be missing in the available literature. This required significantly more involvement
+%	 than originally envisaged in the PhD project. 
+%	- attempt to compare most metamaterial structures
 %	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
 %		to regions of |Neff'|~0
 %	- some others have well-defined electric and magnetic individual resonances, yet Neff is not applicable when
@@ -35,21 +37,22 @@
 %		a special exception is when approaching a Dirac point of isofrequency contours
 %	- (the choice of branch for Neff is unambiguous by our retrieval procedure based on FDTD; yet it deserves
 %		proper physical interpretation in some structures)
-%		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not present a big issue compared to more fundamental limitations
-%		of the s-parameter method
-%  * the Results section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
-%	  
+%		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not 
+%		present a big issue compared to more fundamental limitations of the s-parameter method
+%	   (mention the limitations)
+%	- pointed out the conditions for observation of zero-width photonic bands (e.g. Fig. \ref{fg_cdh2}b) and zero-width photonic band gaps (e.g. Fig.)
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials,   \cite{tassin2012comparison}
 
 
-%      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
+%      2) excessive spatial dispersion in known structures, with regards to the longitudinal changes in the wavevector (i.e. in the wavenumber); i.e. the eff-param spectra often 'stick' to the BZ boundary
 %		  without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion 
 %		  (http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 %         stress the importance of taking the spatial dispersion into account; omission thereof is in some case a fundamental misconception, rather 
 %			than a mere inaccuracy
 %			(papers sometimes claim that negative refraction may not occur at NIR/optical frequencies due to the lack of magnetic activity; however
 %			this relies on the local eff. param theory)
+%		2b) spatial dispersion with regards to the transverse changes in the wave vector seems to be better discussed in the literature 
 %      3) the s-parameter method, although widely used, does not always give correct results for diverse reasons
 %		  notice that e.g. 1-D PhC allows to determine Neff, but not eeff,meff, whereas
 %		  the electro-magnetic resonator exhibits independent el and mag resonances, but its Neff can not always 
@@ -77,6 +80,8 @@
 
 %+ Kramers-Kronig check of the RodArray spectrum (or some other?)
 
+%  * the Results section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
+%	  
 
 
 %% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
@@ -103,7 +108,7 @@ The number of papers related to metamaterials has rocketed in the last decade in
 , and 
 the hypertrophic number of publications dissolves the concentration of pertinent ideas in almost a homeopatic way.  
 Perhaps anybody interested in MM will soon notice there are many papers adding just a quantitative difference to what was already published, often without stating this important fact. This may give a superficial feeling of an exponential gathering of knowledge, but in fact it mostly contributes to the information noise. 
-In addition, the MM-related books available are often composed of ordinary papers, unrelated to each other and not covering all necessary theory, thus hardly preparing the reader to study the literature.
+In addition, the MM-related books available are often composed of ordinary papers, unrelated to each other and not covering all necessary theory, thus hardly preparing the reader to study the literature. % and instead of clear rigorous development of the theory, the books rather repeat nebulous phrases...
 
 %The name of this chapter is borrowed from the same-named book by Ben Munk \cite{Munk2004}. The book presents several objections against MM that seem to be ill-argumented and some of them seem to be also utterly wrong. 
 %However, as another point it also touches a really deep problem: 
